RESOLVED FIXED81834
Fix remaining WTF includes in JavaScriptCore in preparation for moving WTF headers out of JavaScriptCore
https://bugs.webkit.org/show_bug.cgi?id=81834
Summary Fix remaining WTF includes in JavaScriptCore in preparation for moving WTF he...
Eric Seidel (no email)
Reported 2012-03-21 15:11:11 PDT
Fix remaining WTF includes in JavaScriptCore in preparation for moving WTF headers out of JavaScriptCore
Attachments
Patch (3.97 KB, patch)
2012-03-21 15:11 PDT, Eric Seidel (no email)
no flags
Eric Seidel (no email)
Comment 1 2012-03-21 15:11:44 PDT
Eric Seidel (no email)
Comment 2 2012-03-21 15:13:39 PDT
Will wait for the mac-ews to roll green before landing.
Gustavo Noronha (kov)
Comment 3 2012-03-21 15:14:16 PDT
Eric Seidel (no email)
Comment 4 2012-03-21 15:43:28 PDT
I don't understand the gtk error.
Philippe Normand
Comment 5 2012-03-21 15:48:02 PDT
(In reply to comment #4) > I don't understand the gtk error. Looks like a broken version of GNU Make, we have a plan to build a custom version as part of our jhbuild process, see: https://bugs.webkit.org/show_bug.cgi?id=81769
Eric Seidel (no email)
Comment 6 2012-03-21 16:18:27 PDT
Comment on attachment 133121 [details] Patch Clearing flags on attachment: 133121 Committed r111618: <http://trac.webkit.org/changeset/111618>
Eric Seidel (no email)
Comment 7 2012-03-21 16:18:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.