Source/JavaScriptCore/runtime/JSDateMath.cpp
@@ -72,12 +72,8 @@
 #include "config.h"
 #include "JSDateMath.h"
 
-#include "CurrentTime.h"
 #include "JSObject.h"
-#include "MathExtras.h"
 #include "ScopeChain.h"
-#include "StdLibExtras.h"
-#include "StringExtras.h"
 
 #include <algorithm>
 #include <limits.h>
@@ -86,6 +82,10 @@
 #include <time.h>
 #include <wtf/ASCIICType.h>
 #include <wtf/Assertions.h>
+#include <wtf/CurrentTime.h>
+#include <wtf/MathExtras.h>
+#include <wtf/StdLibExtras.h>
+#include <wtf/StringExtras.h>
 #include <wtf/text/StringBuilder.h>
 
 #if HAVE(ERRNO_H)
